# ProdigiousPython

./: .gitignore  Dockerfile  README.md  _config.yml  _toc.yml  builddocs.sh  compose.yml  docgen.sh  environment.yml  integrationtoken  intro.md  pyproject.toml  requirements.txt  temp.py
.github/workflows/: main.yml  publish_docs.yml
docs/: .buildinfo  CODE_OF_CONDUCT.html  README.html  genindex.html  index.html  intro.html  objects.inv  search.html  searchindex.js  sitemap.xml
docs/_sources/: README.md  intro.md
prodigiouspython/Chapter_1/: 10_String_representations_of_objects.ipynb  1_Getting_Started_With_Python_Language.ipynb  4_Datatypes.ipynb  6_IDEs_for_Python.ipynb  8_Builtins.ipynb  greet.py
prodigiouspython/Chapter_2/: 1_Indentation.ipynb
prodigiouspython/Chapter_3/: 1_Comments_and_docstrings.ipynb
prodigiouspython/Chapter_4/: 3_Unnamed_Positional_Arguments.ipynb  5_Keyword_arguments.ipynb
prodigiouspython/Chapter_5/: 1_Mathematical_Operators.ipynb
prodigiouspython/Chapter_6/: 1_Conditionals.ipynb
prodigiouspython/Chapter_8/: 1_Classes.ipynb  2_Class_Attributes.ipynb  3_Class_Static_Methods.ipynb
pythonworkshop/: __main__.py
pythonworkshop/Chapter_1/: 10_String_representations_of_objects.ipynb  11_Installing_Packages.ipynb  1_Getting_Started_With_Python_Language.ipynb  2_Creating_Variables_and_Assigning_Values.ipynb  3_Keywords_and_Variable_naming.ipynb  4_Datatypes.ipynb  5_Collection_Types.ipynb  6_IDEs_for_Python.ipynb  7_User_Input.ipynb  8_Builtins.ipynb  greet.py
pythonworkshop/Chapter_2/: 1_Indendation.ipynb
pythonworkshop/Chapter_3/: 1_Comments_and_docstrings.ipynb
tests/: test_pythonworkshop.py
(+130 files in other folders)
