[tool.poetry]
name = "ProdigiousPython"
version = "0.1.0"
description = ""
authors = ["Prodigious Python"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.13.2"
jupyterlab = "^4.0.0"

[tool.poetry.group.dev.dependencies]
jupyter-book = "^0.15.1"
sphinx-sitemap = "^2.5.0"
pytest = "^7.3"
black = {extras = ["jupyter"], version = "^23.3"}
black-nb = "^0.7"
pyppeteer = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
