[tool.poetry]
name = "ProdigiousPython"
version = "0.1.0"
description = ""
authors = ["Prodigious Python"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.20.0"
jupyterlab = "^4.1.3"

[tool.poetry.group.dev.dependencies]
jupyter-book = "^1.0.0"
sphinx-sitemap = "^2.5.1"
pytest = "^8.0.0"
black = {extras = ["jupyter"], version = "^24.1.1"}
black-nb = "^0.7"
pyppeteer = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
